# MusicOCR

./: README.md
experimental/: CMakeLists.txt  Dockerfile  display_image.cpp  dump_data_list.cpp  model.feb2020-fine.dtrees.yaml  model.feb2020.dtrees.yaml  ocr_shell.cpp  test_knn.cpp  train_knn.cpp
experimental/include/: corners.hpp  recognition.hpp  shapes.hpp  structured_page.hpp  training.hpp  training_fileutils.hpp  training_key.hpp  utils.hpp
experimental/src/: corners.cpp  shapes.cpp  structured_page.cpp  training.cpp  training_fileutils.cpp  training_key.cpp  utils.cpp
experimental/test/: cornerstest.cpp  structured_page_test.cpp
experimental/test/data/: list
